<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.devices.BloodPressureActivity">

    <Button
        android:id="@+id/pressione_ottimale"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/pressione_ottimale"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pressione_alta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </Button>

    <Button
        android:id="@+id/pressione_alta"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/pressione_alta"
        app:layout_constraintTop_toBottomOf="@id/pressione_ottimale"
        app:layout_constraintBottom_toTopOf="@id/pressione_bassa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </Button>

    <Button
        android:id="@+id/pressione_bassa"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/pressione_bassa"
        app:layout_constraintTop_toBottomOf="@id/pressione_alta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>